--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
  <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" /></head>
+ <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+</head>
+
 <body>
  <header id="header">
   <!-- nav -->
@@ -33,8 +35,8 @@
     <li><a href="#">Portfolio</a></li>
     <li><a href="#">Blog</a></li>
     <li><a href="#">Contact Us</a></li>
-    <li><a href="#" class="link-icon"><i class="fa fa-search"></i>
-     Home</a></li>
+    <li class="icon"><a href="#" class="link-icon"><i class="fa fa-search"></i>
+     </a></li>
 
 
    </ul>
@@ -47,14 +49,14 @@
     <h1 id="banner-title">Codding Addict</h1>
     <div class="banner-underline"></div>
     <h3 class="banner-subtitle">Coding Addict Meets The Power Of CSS FlexBox</h3>
-<i class="far fa-lightbulb">Explore</i>   
+    <a href="#"><i class="far fa-lightbulb">Explore</i></a>
    </div>
   </section>
  </header>
  <!-- end of header -->
 
-<!-- Jquer -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ <!-- Jquer -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
  <script src="script.js"></script>
 </body>
