--- a/index.html
+++ b/index.html
@@ -2,63 +2,128 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Project</title>
- <!-- main.css -->
- <link rel="stylesheet" href="main.css">
- <!-- font awesome icons -->
- <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/fontawesome.min.css">
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-  integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project</title>
+  <!-- main.css -->
+  <link rel="stylesheet" href="main.css">
+  <!-- font awesome icons -->
+  <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/fontawesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
- <!-- Google Fonts -->
- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 </head>
 
 <body>
- <header id="header">
-  <!-- nav -->
-  <nav>
-   <div id="nav-top">
-    <h3>Coding</h3>
-    <div id="menu-btn">
-     <div class="bar1"> </div>
-     <div class="bar2"> </div>
-     <div class="bar3"> </div>
+  <header id="header">
+    <!-- nav -->
+    <nav>
+      <div id="nav-top">
+        <h3>Coding</h3>
+        <div id="menu-btn">
+          <div class="bar1"> </div>
+          <div class="bar2"> </div>
+          <div class="bar3"> </div>
+        </div>
+      </div>
+      <!-- nav links -->
+      <ul id="links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li class="icon"><a href="#" class="link-icon"><i class="fa fa-search"></i>
+          </a></li>
+
+
+      </ul>
+    </nav>
+
+
+    <!-- end nav -->
+    <section id="banner">
+      <div id="banner-box">
+        <h1 id="banner-title">Codding Addict</h1>
+        <div class="banner-underline"></div>
+        <h3 class="banner-subtitle">Coding Addict Meets The Power Of CSS FlexBox</h3>
+        <a href="#"><i class="far fa-lightbulb">Explore</i></a>
+      </div>
+    </section>
+  </header>
+  <!-- end of header -->
+
+  <!-- skills section -->
+  <section id="skills">
+    <!-- title -->
+    <div class="title">
+      <h1 class="title-text">Skills</h1>
+      <div class="title-underline"></div>
     </div>
-   </div>
-   <!-- nav links -->
-   <ul id="links">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Skills</a></li>
-    <li><a href="#">Portfolio</a></li>
-    <li><a href="#">Blog</a></li>
-    <li><a href="#">Contact Us</a></li>
-    <li class="icon"><a href="#" class="link-icon"><i class="fa fa-search"></i>
-     </a></li>
+    <!-- end of title -->
+    <div class="skills-center">
+      <article class="skill">
+        <i class="fas fa-chart-pie"></i>
+        <h3>best data</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatum at aut sapiente facere ex.</p>
+      </article>
+      <article class="skill">
+        <i class="fas fa-chart-line"></i>
+        <h3>best results</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatum at aut sapiente facere ex.</p>
+      </article>
+      <article class="skill">
+        <i class="fas fa-bolt"></i>
+        <h3>fastest speed</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatum at aut sapiente facere ex.</p>
+      </article>
+      <article class="skill">
+        <i class="fas fa-flask"></i>
+        <h3>Innovation</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatum at aut sapiente facere ex.</p>
+      </article>
+      
+    </div>
 
-
-   </ul>
-  </nav>
-
-
-  <!-- end nav -->
-  <section id="banner">
-   <div id="banner-box">
-    <h1 id="banner-title">Codding Addict</h1>
-    <div class="banner-underline"></div>
-    <h3 class="banner-subtitle">Coding Addict Meets The Power Of CSS FlexBox</h3>
-    <a href="#"><i class="far fa-lightbulb">Explore</i></a>
-   </div>
   </section>
- </header>
- <!-- end of header -->
+  <!-- end of skills section -->
 
- <!-- Jquer -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
- <script src="script.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Jquer -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
