--- a/index.html
+++ b/index.html
@@ -89,8 +89,23 @@
 
   </section>
   <!-- end of skills section -->
+  <!-- about section -->
+  <section id="about">
+    <article id="about-text">
+      <h2>Create Websites the Easy Way</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic error deserunt repellat dignissimos laboriosam necessitatibus maiores doloremque reprehenderit? Laboriosam impedit iusto dolorum similique perferendis, possimus nemo facere ipsa. Suscipit, quibusdam.
+      </p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic error deserunt repellat dignissimos laboriosam
+        necessitatibus maiores doloremque reprehenderit? Laboriosam impedit iusto dolorum similique perferendis, possimus nemo
+        facere ipsa. Suscipit, quibusdam.
+      </p>
+    </article>
+    <article id="about-video">
+      <iframe src="http://www.youtube.com/embed/aYSgpR5VGPM" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
+    </article>
+  </section>
 
-
+  <!-- end of about section -->
 
 
 
