--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         necessitatibus maiores doloremque reprehenderit? Laboriosam impedit iusto dolorum similique perferendis, possimus nemo
         facere ipsa. Suscipit, quibusdam.
       </p>
+      <a href="#">know more <i class="fas fa-cogs"></i></a>
     </article>
     <article id="about-video">
       <iframe src="http://www.youtube.com/embed/aYSgpR5VGPM" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
