--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h3>Innovation</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatum at aut sapiente facere ex.</p>
       </article>
-      
+
     </div>
 
   </section>
@@ -93,22 +93,103 @@
   <section id="about">
     <article id="about-text">
       <h2>Create Websites the Easy Way</h2>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic error deserunt repellat dignissimos laboriosam necessitatibus maiores doloremque reprehenderit? Laboriosam impedit iusto dolorum similique perferendis, possimus nemo facere ipsa. Suscipit, quibusdam.
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic error deserunt repellat dignissimos laboriosam
+        necessitatibus maiores doloremque reprehenderit? Laboriosam impedit iusto dolorum similique perferendis,
+        possimus nemo facere ipsa. Suscipit, quibusdam.
       </p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic error deserunt repellat dignissimos laboriosam
-        necessitatibus maiores doloremque reprehenderit? Laboriosam impedit iusto dolorum similique perferendis, possimus nemo
+        necessitatibus maiores doloremque reprehenderit? Laboriosam impedit iusto dolorum similique perferendis,
+        possimus nemo
         facere ipsa. Suscipit, quibusdam.
       </p>
       <a href="#">know more <i class="fas fa-cogs"></i></a>
     </article>
     <article id="about-video">
-      <iframe src="http://www.youtube.com/embed/aYSgpR5VGPM" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
+      <iframe src="http://www.youtube.com/embed/aYSgpR5VGPM" width="100%" height="315" frameborder="0"
+        allowfullscreen></iframe>
     </article>
   </section>
 
   <!-- end of about section -->
 
+  <!-- services -->
+  <section id="services">
+    <!-- title -->
+    <div class="title">
+      <h1 class="title-text">Services</h1>
+      <div class="title-underline"></div>
+    </div>
+    <!-- end of title -->
+    <div class="services-center">
+      <!-- single service -->
+      <article class="service">
+        <div class="service-icon">
+          <i class="fas fa-code"></i>
+        </div>
+        <div class="servide-text">
+          <h2 class="service-subtitle">Clean Code</h2>
+          <p class="service-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, vitae.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+      <!-- single service -->
+      <article class="service">
+        <div class="service-icon">
+          <i class="far fa-comment"></i>
+        </div>
+        <div class="servide-text">
+          <h2 class="service-subtitle">Clean Text</h2>
+          <p class="service-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, vitae.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+      <!-- single service -->
+      <article class="service">
+        <div class="service-icon">
+          <i class="fas fa-code-branch"></i> </div>
+        <div class="servide-text">
+          <h2 class="service-subtitle">Code Fork</h2>
+          <p class="service-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, vitae.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+      <!-- single service -->
+      <article class="service">
+        <div class="service-icon">
+          <i class="fab fa-codepen"></i> </div>
+        <div class="servide-text">
+          <h2 class="service-subtitle">Codepen</h2>
+          <p class="service-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, vitae.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+      <!-- single service -->
+      <article class="service">
+        <div class="service-icon">
+          <i class="fab fa-css3"></i> </div>
+        <div class="servide-text">
+          <h2 class="service-subtitle">CSS 3</h2>
+          <p class="service-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, vitae.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+      <!-- single service -->
+      <article class="service">
+        <div class="service-icon">
+          <i class="fab fa-html5"></i>
+        </div>
+        <div class="servide-text">
+          <h2 class="service-subtitle">HTML 5</h2>
+          <p class="service-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, vitae.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
 
+
+    </div>
+  </section>
+
+  <!-- end of  services -->
 
 
 
