--- a/index.html
+++ b/index.html
@@ -296,8 +296,11 @@
   </div>
 
 
-
+  <div class="section-btn">
+    <a href="#"><i class="far fa-lightbulb"></i>Explore More Projects</a>
+  </div>
   </section>
+
   <!-- end of portfolio -->
 
 
