add customers html css and responsive

--- a/index.html
+++ b/index.html
@@ -423,6 +423,38 @@
               </div>
             </section>
             <!--end of team-->
+            <!-- customer -->
+            <section id="customers">
+              <!-- title -->
+              <div class="title">
+                <h1 class="title-text">Customer Reviews</h1>
+                <div class="title-underline"></div>
+              </div>
+              <!-- end of title -->
+              <div class="customers-center">
+                <article class="customer">
+                  <img src="images/team-1.jpg" alt="">
+                  <h3>John Doe</h3>
+                  <h5>Web Developer</h5>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, hic excepturi molestiae reprehenderit quo animi.</p>
+                </article>
+                <article class="customer">
+                  <img src="images/team-2.jpg" alt="">
+                  <h3>John Doe</h3>
+                  <h5>Web Developer</h5>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, hic excepturi molestiae reprehenderit quo
+                    animi.</p>
+                </article>
+                <article class="customer">
+                  <img src="images/team-3.jpg" alt="">
+                  <h3>John Doe</h3>
+                  <h5>Web Developer</h5>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, hic excepturi molestiae reprehenderit quo
+                    animi.</p>
+                </article>
+              </div>
+            </section>
+            <!-- end of customer -->
         
 
     <!-- Jquer -->
