contactus html css responsive

--- a/index.html
+++ b/index.html
@@ -455,7 +455,50 @@
               </div>
             </section>
             <!-- end of customer -->
-        
+          <!-- Contact Form -->
+          <section id="contact">
+            <!-- title -->
+            <div class="title">
+              <h1 class="title-text">Contact Us</h1>
+              <div class="title-underline"></div>
+            </div>
+            <!-- end of title -->
+            <div class="contact-center">
+              <article id="company-info">
+                <div class="item-info">
+                  <i class="fas fa-map-marker-alt"></i>
+                  <p>8300 Some Street Drive</p>
+                </div>
+                <div class="item-info">
+                  <i class="fas fa-phone"></i>
+                  <p>9711140165</p>
+                </div>
+                <div class="item-info">
+                  <i class="fas fa-envelope"></i>
+                  <p>email@email.com</p>
+                </div>
+                <div class="item-info">
+                  <i class="fas fa-clock"></i>
+                  <p>24/7</p>
+                </div>
+              </article>
+              <article id="customer-info">
+                <form class="form">
+                  <input type="text" id="name" placeholder="Name">
+                  <input type="email" id="email" placeholder="Email">
+                  <input type="text" id="subject" placeholder="Subject">
+                  <input type="text" id="message" placeholder="Message">
+                </form>
+                <a href="#"><i class="fas fa-envelope"></i>Send Message</a>
+              </article>
+            </div>
+          </section>
+
+
+
+
+          <!-- End Of Contact Form -->
+          
 
     <!-- Jquer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
