--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
       <a href="#">know more <i class="fas fa-cogs"></i></a>
     </article>
     <article id="about-video">
-      <iframe src="http://www.youtube.com/embed/aYSgpR5VGPM" width="100%" height="315" frameborder="0"
-        allowfullscreen></iframe>
+      <!-- <iframe src="http://www.youtube.com/embed/aYSgpR5VGPM" width="100%" height="315" frameborder="0"
+        allowfullscreen></iframe> -->
+      <iframe class="responsive-video " src="http://www.youtube.com/embed/aYSgpR5VGPM" frameborder="0" width="100%" height="315"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </article>
   </section>
 
